// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPane correctly applies the theme context className 1`] = `
<div
  aria-describedby={null}
  aria-disabled={false}
  aria-label="Default"
  aria-selected={false}
  className="tab is-text-only orion-fusion-theme"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Default"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-00000000-0000-0000-0000-000000000000"
      text="Terra.tabs.hint.removable"
    />
    <span
      className="label"
    >
      Default
    </span>
  </div>
</div>
`;

exports[`TabPane should render a default component with label 1`] = `
<div
  aria-describedby={null}
  aria-disabled={false}
  aria-label="Default"
  aria-selected={false}
  className="tab is-text-only"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Default"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-00000000-0000-0000-0000-000000000000"
      text="Terra.tabs.hint.removable"
    />
    <span
      className="label"
    >
      Default
    </span>
  </div>
</div>
`;

exports[`TabPane should render with a custom display when provided 1`] = `
<div
  aria-describedby={null}
  aria-disabled={false}
  aria-label="Label"
  aria-selected={false}
  className="tab is-text-only"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Label"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-00000000-0000-0000-0000-000000000000"
      text="Terra.tabs.hint.removable"
    />
    <div>
      Custom Display
    </div>
  </div>
</div>
`;

exports[`TabPane should render with icon and label 1`] = `
<div
  aria-describedby={null}
  aria-disabled={false}
  aria-label="Label"
  aria-selected={false}
  className="tab"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Label"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-00000000-0000-0000-0000-000000000000"
      text="Terra.tabs.hint.removable"
    />
    <div>
      Fake icon
    </div>
    <span
      className="label"
    >
      Label
    </span>
  </div>
</div>
`;

exports[`TabPane should render with icon only when indicated 1`] = `
<div
  aria-describedby={null}
  aria-disabled={false}
  aria-label="Label"
  aria-selected={false}
  className="tab is-icon-only"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Label"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-00000000-0000-0000-0000-000000000000"
      text="Terra.tabs.hint.removable"
    />
    <div>
      Fake icon
    </div>
  </div>
</div>
`;
